# demo-aip-python-sdk

./: .env.example  .gitignore  README.md  cv_agent_results.csv  cv_reader_tool.py  demo.py  hello_world.py  pyproject.toml  sample_cv_text.txt  utils.py
