[project]
name = "demo-aip-python-sdk"
version = "0.1.0"
description = "Demo for AIP Python SDK with CV reader agent"
authors = [
    {name = "saulsayerzgdp", email = "saul.sayers@gdplabs.id"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "glaip-sdk>=0.0.5,<0.0.6",
    "gllm-evals>=0.0.22,<0.0.23",
    "python-dotenv>=1.0.0,<2.0.0",
]

[[tool.poetry.source]]
name = "gen-ai"
url = "https://glsdk.gdplabs.id/gen-ai/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
